<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>name.mjw</groupId>
	<artifactId>jquante</artifactId>
	<packaging>jar</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>jquante</name>

	<properties>
		<maven.min-version>3.0.4</maven.min-version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<junit.version>4.12</junit.version>
		<vecmath.version>1.3.1</vecmath.version>
		<log4j.version>1.2.17</log4j.version>
		<fortranformat.version>1.1.1</fortranformat.version>
		<jaxb.version>2.3.0</jaxb.version>
	</properties>

	<description>JQuante is essentially a JAVA QM toolkit that was inspired by PyQuante.</description>

	<url>https://bitbucket.org/mjw99/jquante</url>

	<inceptionYear>2012</inceptionYear>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<developers>
                <developer>
                        <name>V. Ganesh</name>
                        <email>tovganesh@gmail.com</email>
                        <url>http://tovganesh.blogspot.co.uk/</url>
                        <roles>
                                <role>Founder</role>
                                <role>Java Developer</role>
                        </roles>
                </developer>

                <developer>
                        <name>Josh Milthorpe</name>
                        <email>jjmiltho@us.ibm.com</email>
                        <url>http://www.milthorpe.org/</url>
			<organization>Australian National University Research School of Computer Science</organization>
                        <roles>
                                <role>Java Developer</role>
                        </roles>
                </developer>

		<developer>
			<id>mjw99</id>
			<name>Mark J. Williamson</name>
			<email>mjw@mjw.name</email>
			<url>http://www.ch.cam.ac.uk/person/mw529</url>
			<organization>Cambridge University</organization>
			<organizationUrl>http://www.cam.ac.uk</organizationUrl>
			<roles>
				<role>Java Developer</role>
			</roles>
			<timezone>Europe/London</timezone>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://bitbucket.org/mjw99/jquante</connection>
		<url>https://bitbucket.org/mjw99/jquante</url>
	</scm>

        <prerequisites>
                <maven>${maven.min-version}</maven>
        </prerequisites>

	<build>
		<plugins>
                        <plugin>
				<groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-enforcer-plugin</artifactId>
                                <version>3.0.0-M1</version>
			        <executions>
			          <execution>
			            <id>enforce-maven</id>
			            <goals>
			              <goal>enforce</goal>
			            </goals>
			            <configuration>
			              <rules>
			                <requireMavenVersion>
			                  <version>${maven.min-version}</version>
			                </requireMavenVersion>
			              </rules>
			            </configuration>
			          </execution>
			        </executions>
                        </plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>

			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
			</plugin>

			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.5.2</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.6</version>
			</plugin>
			<plugin>
				<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
				<artifactId>maven-java-formatter-plugin</artifactId>
				<version>0.4</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>java3d</groupId>
			<artifactId>vecmath</artifactId>
			<version>${vecmath.version}</version>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>name.mjw</groupId>
			<artifactId>fortranformat</artifactId>
			<version>${fortranformat.version}</version>
		</dependency>

                <dependency>
                    <groupId>javax.xml.bind</groupId>
                    <artifactId>jaxb-api</artifactId>
                    <version>${jaxb.version}</version>
                </dependency>

	</dependencies>
</project>
